Combining everything into index.html

--- a/src/chart-files/heatmap/style.css
+++ b/src/chart-files/heatmap/style.css
@@ -1,5 +1,15 @@
+body {
+    position: relative;
+}
 #my_dataviz {
     width: 50%;
+    float: left;
+}
+
+#legend {
+    margin-top: 100px;
+    width: 50%;
+    float: right;
 }
 
 text {
