--- a/src/chart-files/histogram/style.css
+++ b/src/chart-files/histogram/style.css
@@ -1,9 +1,13 @@
-#Plotting_G1_G2{
-    width: 50%; /* set width to 50% of page width */
-    float: left; /* Make the element go to the left */
+#container {
+    width: 100%;
 }
 
-#Plotting_G2_G3{
+#Histogram {
+    float: left;
     width: 50%;
-    float: right;
+}
+
+#information {
+    width: 50%;
+    line-height: 30px;
 }
