--- a/src/chart-files/heatmap/style.css
+++ b/src/chart-files/heatmap/style.css
@@ -1,14 +1,15 @@
 body {
-    position: relative;
+    width: 100%;
+    height: 100%;
 }
 #my_dataviz {
-    width: 50%;
+    width: 60%;
     float: left;
 }
 
 #legend {
     margin-top: 100px;
-    width: 50%;
+    width: 40%;
     float: right;
 }
 
