--- a/src/chart-files/histogram/style.css
+++ b/src/chart-files/histogram/style.css
@@ -3,11 +3,17 @@
 }
 
 #Histogram {
+    position: absolute;
+    top: 100px;
     float: left;
     width: 50%;
 }
 
 #information {
+    position: absolute;
     width: 50%;
+    float: right;
+    top: 100px;
+    right: 50px;
     line-height: 30px;
 }
