--- a/src/main-style.css
+++ b/src/main-style.css
@@ -28,6 +28,22 @@ body {
     display: flex;
 }
 
+#section9 {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    line-height: 30px;
+}
+
+#section9 div#information {
+    justify-content: center;
+    position: absolute;
+    width: 50%;
+    top: 100px;
+    left: 400px;
+}
+
 h3,
 h4,
 h5,
